Making tasks editable

--- a/app/views/newsfeed/_post.html.haml
+++ b/app/views/newsfeed/_post.html.haml
@@ -19,10 +19,11 @@
                 %span.caret{ style: "margin: 6px 0 0 0;" }
               %ul.dropdown-menu{ role: "button", style: "margin: 0; padding: 0; top:26px; left: -71px; min-width: 140px;" }
                 %li{ style: "margin-left: -10px;" }
-                  %div.graynub{ style: "top:-17px; left: 74px; margin:0; "}
+                  %div.graynub{ style: "top:-37px; left: 74px; margin:0; "}
                   %div{ style: "padding: 3px 0px; margin:0;"}
                     %ul.profile_dropdown{ style: "list-style: none; margin: 0px; padding: 0; min-width: 120px;"}
-                      %li= link_to "Delete Submission", retract_submission_path(post.id), remote: true, confirm: "Are you sure you want to delete your submission?", class: "retract_link", style: "padding:0; text-align:center;"
+                      %li= link_to "Edit Submission", take_section_path(post.section.id, task_id: post.task_id), style: "padding:0;"
+                      %li= link_to "Delete Submission", retract_submission_path(post.id), remote: true, confirm: "Are you sure you want to delete your submission?", class: "retract_link", style: "padding:0;"
           - else
             = link_to vote_task_path(post.task.id, sa_id: post.submitted_answer.id), remote: true, class: ("btn vote_button " + (feed.votes.include?(post.submitted_answer.id) ? "btn-info" : "")) do
               %img{ src: ICON_UPVOTE_URL, alt: "Up-vote" }
