landing page changes

--- a/app/views/pages/landing.html.haml
+++ b/app/views/pages/landing.html.haml
@@ -6,15 +6,15 @@
   .container h3{ left:68px; }
   #landingbox{ margin-bottom:70px; margin-top: 100px; height:304px; width: 695px; margin-left: auto; margin-right: auto; background-color: whiteSmoke;border-radius: 6px;border: 1px solid rgba(0, 0, 0, .1);background: rgba(255, 255, 255, 0.8); }
   .footer { position: absolute; bottom:0;}
-  #landing_carousel_box {z-index:10; min-height:137px; position:absolute; bottom:0; width: 100%; margin-left: auto; margin-right: auto; background: #3A5A5A; /* Old browsers */background: -moz-linear-gradient(top, #3A5A5A 0%, #000000 100%); /* FF3.6+ */background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#3A5A5A), color-stop(100%,#000000)); /* Chrome,Safari4+ */background: -webkit-linear-gradient(top, #3A5A5A 0%,#000000 100%); /* Chrome10+,Safari5.1+ */background: -o-linear-gradient(top, #3A5A5A 0%,#000000 100%); /* Opera 11.10+ */background: -ms-linear-gradient(top, #3A5A5A 0%,#000000 100%); /* IE10+ */background: linear-gradient(to bottom, #3A5A5A 0%,#000000 100%); /* W3C */filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3A5A5A', endColorstr='#000000',GradientType=0 ); /* IE6-9 */}
+  #landing_carousel_box {z-index:10; min-height:132px; position:absolute; bottom:0; width: 100%; margin-left: auto; margin-right: auto; background: #3A5A5A; /* Old browsers */background: -moz-linear-gradient(top, #3A5A5A 0%, #000000 100%); /* FF3.6+ */background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#3A5A5A), color-stop(100%,#000000)); /* Chrome,Safari4+ */background: -webkit-linear-gradient(top, #3A5A5A 0%,#000000 100%); /* Chrome10+,Safari5.1+ */background: -o-linear-gradient(top, #3A5A5A 0%,#000000 100%); /* Opera 11.10+ */background: -ms-linear-gradient(top, #3A5A5A 0%,#000000 100%); /* IE10+ */background: linear-gradient(to bottom, #3A5A5A 0%,#000000 100%); /* W3C */filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3A5A5A', endColorstr='#000000',GradientType=0 ); /* IE6-9 */}
   .persona_horizontal_table{ display:table; margin: 0 auto; width:90%; margin-bottom:10px;}
-  .persona_horizontal_table li{ width: 12.5%; font-size:15px;}
-  .persona_horizontal_table li a{ text-align:center; width: 65%; margin-right: auto; margin-left: auto; padding-bottom:1px; border-bottom-width:2px; color: rgb(207, 214, 255);}
+  .persona_horizontal_table li{ width: 19.8%; font-size:18px;}
+  .persona_horizontal_table li a{ text-align:center; width: 45%; margin-right: auto; margin-left: auto; padding-bottom:1px; border-bottom-width:2px; color: rgb(207, 214, 255);}
   .persona_horizontal_table .nav-tabs > li > a:hover { color: rgb(207, 214, 255); border-color:transparent; background-color:transparent; border-bottom-color: rgb(58, 153, 201); border-bottom-width:2px;}
   .nav-tabs > .active > a { border-bottom-width: 2px; font-weight: bold; border-bottom-color: rgb(58, 153, 201); background-color:transparent; border-right:none; border-left:none; border-top:none; color: rgb(207, 214, 255);}
   .nav-tabs > .active > a:hover { border:0px solid; color: rgb(207, 214, 255);}
   .persona_horizontal_table ul { border-bottom: none; margin-bottom:0;}
-  .challenge_table ul {list-style:none; margin-left:0; text-align:center; }
+  .challenge_table ul {list-style:none; margin-left:0; text-align:center; margin-bottom:5px;}
   .challenge_table{ display:table; margin: 0 auto; width:90%;}
   .challenge_table li{ width: 19.5%; display:inline-block; text-align:left; }
   .challenge_table .mosaic-overlay{background-color: rgba(0, 0, 0, .8);}
