--- a/app/views/paths/show.html.haml
+++ b/app/views/paths/show.html.haml
@@ -7,7 +7,7 @@
         %img{src:"https://s3.amazonaws.com/moonlite-nsdub/static/stoney+100x150.png", style: " display:inline; height:90px;", alt: "Stoney"}
         %h1{style:"display:inline; position:relative; top:12px; font-size: 30px;"} Looks like you're new here...
       %div{style:"margin-left:20px; margin-top:-10px;"}
-        %h4 MetaBright is a place to showcase your skills and get better at the stuff you're passionate about. Learn more about us <a href="/about">here</a>.
+        %h4 MetaBright is the place to prove and showcase your skills. Learn more about us <a href="/about">here</a>.
         %h4{style:"margin-top:15px;"} Poke around a little bit, and when you're ready to join the Challenge yourself, come back here to <a class="login_link">sign up</a>. It only takes five seconds. Honest!
   %div#topsection
     %div#updatespace
