--- a/app/views/pages/landing.html.haml
+++ b/app/views/pages/landing.html.haml
@@ -1,7 +1,7 @@
 :css
   #landinglogo{width:720px;margin-top:-40px; margin-bottom:-30px; }
-  #tagline{ width:580px; margin-right:auto; margin-left:auto; text-align:center;}
-  #tagline span{ font-size:18px;}
+  #tagline{ width:627px; margin-right:auto; margin-left:auto; text-align:center;}
+  #tagline span{ font-size:22px; line-height:22px; }
   .container {width: 940px; margin-left: auto; margin-right: auto; zoom: 1; display:inline-block; padding:3px 0 0 142px;}
   .container h3{ left:68px; }
   #landingbox{ margin-bottom:70px; margin-top: 100px; height:304px; width: 695px; margin-left: auto; margin-right: auto; background-color: whiteSmoke;border-radius: 6px;border: 1px solid rgba(0, 0, 0, .1);background: rgba(255, 255, 255, 0.8); }
@@ -27,7 +27,7 @@
   %div#logospace{ style: "width:720px;margin-right:auto;margin-left:auto;position: relative;" }
     %img#landinglogo{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/MB+logo", alt: "MetaBright"}
   %div#tagline
-    %span We believe that everyone has the right to be recognized for their knowledge and skills, not just what fits neatly on a resume.
+    %span We believe everyone has the right to be recognized for their knowledge and skills, not just what fits neatly on a resume.
   %div#buttonspace{ style: "margin-top:30px;" }
     %center
       = link_to "/auth/google_oauth2", class: "btn danger", style: "margin-right: 40px; width:205px; padding-top:7px; padding-bottom:7px;" do
