copy changes on new user flow

--- a/app/views/pages/intro.html.haml
+++ b/app/views/pages/intro.html.haml
@@ -34,5 +34,5 @@
           %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Random+numbers/round_3_purple.png", alt: "Three" }
           %h3.inttitle Grow
           %p.intdetails
-            Use Challenges to <strong>guide your improvement</strong> and build out your Persona. Dominate the leaderboard and create your own Challenges to become a master of MetaBright.
+            Use Challenges to <strong>build out your profile</strong> and <strong>showcase your skills</strong>. Dominate the leaderboard and create your own Challenges to become a master of MetaBright.
     = link_to "Let's go!", start_path, style: "float: right; margin: 0 10px 10px 0;", class: "button button-actionable"
