--- a/app/views/pages/start.html.haml
+++ b/app/views/pages/start.html.haml
@@ -15,6 +15,7 @@
   
 :css
   .explorecontainer { margin: 15px auto 12px auto; }
+  .explorenewusercontent { box-shadow:none; }
   .modal_close { display: none; }
   .body.container { background-color: transparent; padding-top: 0px; }
 = render "personas/explore"
