--- a/app/assets/stylesheets/revolution.css
+++ b/app/assets/stylesheets/revolution.css
@@ -2,6 +2,7 @@
 pre.unstyled { padding: 0px; background-color: inherit; border: 0px; word-break:normal;}
 .profile_dropdown li:hover { color: white; }
 .navbar{ z-index:1010; }
+.container.body { padding-top: 51px; }
 
 /* Stream/Revolution */
 .newsfeed h4{ margin:9px 10px 10px 10px; font: 12px 'Helvetica Neue', Helvetica, Arial, sans-serif; line-height:10%; letter-spacing:0.15em; color:#fff; text-shadow:1px 1px 0 rgb(0,0,0); }
@@ -313,25 +314,18 @@ body{background-image: url('https://s3.amazonaws.com/moonlite-nsdub/static/easte
 h1, h2, h3, h4, h5, h6, p, div, span, a { font-family: 'MuliRegular'; font-weight: lighter; }
 .button.disabled { opacity: 0.70; box-shadow: 0px 0px 1px black; }
 
-.intcontainer{overflow:hidden; width:695px;margin-left:auto;margin-right:auto;margin:100px auto 200px auto; border-radius:6px;border: 1px solid rgba(0, 0, 0, .1);background: rgba(255, 255, 255, .8); }
-.firstchallengeint{background-color:white; margin:12px; border-radius:10px;border:1px solid rgba(0, 0, 0, .1);overflow:hidden;}
-.firstchallengeintheader{ margin:0px; width:669px;padding:12px 0 5px 12px; background-color:#F9F9F9;}
-.firstchallengeintheader span{font: normal 23px 'MuliRegular', sans-serif; position: relative; bottom: 1px;left:3px}
-.firstchallengeintcontent{padding:12px; }
-.firstchallengeintcontent>ul{list-style: none; margin:0 0 0 2px;}
-.firstchallengeintcontent>ul>li{line-height:17px; padding:0 0 10px 0; }
-.firstchallengeintcontent>ul>li>img{display:inline; height:18px;margin-right:5px; position:relative; top:2px;}
-.inttitle{font-weight:bold; font-size:18px; color:#404040;}
-.intdetails{margin-left:28px; display:inline-block;}
-.firstchallengeint>button{float:right; margin: 0 12px 12px 12px;}
-
-.introintcontent{padding:12px; }
-.introintcontent>ul{list-style: none; margin:0 0 0 2px;}
-.introintcontent>ul>li{line-height:17px; padding:0 0 10px 0; }
-.introintcontent>ul>li>img{display:inline; height:35px;margin-right:5px; position:relative; top:19px; opacity:.8; vertical-align:baseline;}
-.introintcontent>ul>li>.inttitle{}
-.introintcontent>ul>li>.intdetails{margin-left:45px;}
-.dropdown_modal.modal.fade { width: 100%; top: 0%; background-color: transparent; border: 0; box-shadow: 0 0 0; margin-left: auto; margin-right: auto; left: inherit; margin-top: 0px; }
+/* Intro/Revolution */
+.intro_wrapper { overflow:hidden; width:695px; margin-left:auto; margin-right:auto; margin:100px auto 200px auto; border-radius:6px;border: 1px solid rgba(0, 0, 0, .1);background: rgba(255, 255, 255, .8); }
+.intro { background-color:white; margin:12px; border-radius:10px;border:1px solid rgba(0, 0, 0, .1);overflow:hidden;}
+.intro .header { margin:0px; width:669px;padding:12px 0 5px 12px; background-color:#F9F9F9;}
+.intro .header span { font: normal 23px 'MuliRegular', sans-serif; position: relative; bottom: 1px;left:3px}
+.intro .body { padding:12px; }
+.intro .body ul { list-style: none; margin:0 0 0 2px; }
+.intro .body ul li { line-height:17px; padding:0 0 10px 0; }
+.intro .body ul li img { display:inline; height:18px; margin-right:5px; position:relative; top:2px;}
+.intro .body h3 { display: inline; font-weight:bold; font-size:18px; color:#404040; }
+.intro .body p { margin-left:28px; display:inline-block; font-size: 15px; }
+.intro .body button { float:right; margin: 0 12px 12px 12px; }
 
 /* Create and Administer/Revolution */
 .single_pane { padding: 15px; background-color: white; border-radius: 4px; min-height: 400px;}
