--- a/app/assets/stylesheets/z_bootstrap-overrides.css
+++ b/app/assets/stylesheets/z_bootstrap-overrides.css
@@ -50,7 +50,7 @@
 .span11{ display: inline-block; vertical-align: top; width: 640px;} 
 .row .span5{margin-left:20px;}
 .row .span11{margin-left:12px;}
-.container.body { margin-bottom:11px; border-radius:6px; width: 940px; padding: 15px; background-color: rgba(255, 255, 255, .3); border:none; box-shadow:none; }
+.container.body { margin-bottom:11px; border-radius:6px; width: 940px; padding: 51px 15px 15px 15px; background-color: rgba(255, 255, 255, .3); border:none; box-shadow:none; }
 #content { padding-top: 42px; min-height: 450px;}
 .navbar .nav.pull-right li a { color: #BFBFBF; text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25); }
 
