--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,7 +10,7 @@
       = render "modals/login"
       
     = render "layouts/navbar"
-    %div.container.body{ style: "padding-top: 51px;" }
+    %div.container.body
       - flash.each do |key, value|
         = content_tag(:div, value, class: "alert alert-#{key}")
       = yield
