--- a/app/views/modals/_login.html.haml
+++ b/app/views/modals/_login.html.haml
@@ -1,31 +1,36 @@
-%div#login_modal.dropdown_modal.modal.hide.fade{tabindex: "-1"}
-  %div.explorecontainer{ style: "width: 495px; background:none; border:none;" }
-    :javascript
-      $(function(){ close_button(); });
-    %div.explorenewusercontent{ style: "margin:45px;" }
-      %div.exploreheader{ style: "width: inherit;" }
-        %div.modal_close
-          %img{:src => "https://s3.amazonaws.com/moonlite-nsdub/static/close_icon.png", alt:"Close"}
+#login_modal.dropdown_modal.modal.hide.fade{ tabindex: "-1", style: "background-color: transparent; border: none; box-shadow: none;" }
+  .explorecontainer{ style: "width: 495px; background-color: transparent; border:none;" }
+    .explorenewusercontent{ style: "margin:45px; box-shadow: 0 0 30px 12px #888;" }
+      
+      .exploreheader{ style: "width: inherit;" }
+        .modal_close
+          = image_tag ICON_CLOSE_URL, alt: "Close"
         %h1{ style: "margin-bottom: 0; line-height: 23px;" }
-          %img{:src => "https://s3.amazonaws.com/moonlite-nsdub/static/stoney_50x66.png", :style => "height:45px;", alt:"Stoney" } 
+          = image_tag STONEY_SMALL_URL, style: "height:45px;", alt:"Stoney"
           %span{style: "font-size:26px;"} Welcome to MetaBright! 
+      
       %hr{ style: "margin: 0;" }
-      %div.explorebody{ style: "min-height: 235px;" }
+      
+      .explorebody{ style: "min-height: 235px;" }
         %center
           %p{ style: "padding: 10px; font-size: 14px;" } We believe that everyone has the right to be recognized for their knowledge and skills. From accordion playing to zoology, compete with others, and grow together.
+          
           %div
             = link_to "/auth/google_oauth2", class: "btn danger", style: "width:205px;" do
-              %img{ style: "height:30px;", src: "https://s3.amazonaws.com/moonlite-nsdub/static/icon+google.png", alt: "Google" }
+              = image_tag ICON_LOGIN_GOOGLE, style: "height:30px;", alt: "Google"
               %span.landingbuttontext Sign in with Google »
-          %div{style: "background-image: url(https://s3.amazonaws.com/moonlite-nsdub/static/divider.png); background-repeat:no-repeat; background-position: center 10px; width:234px; margin:10px 0; "} OR
+          
+          %div{style: "background-image: url(#{ICON_DIVIDER_URL}); background-repeat:no-repeat; background-position: center 10px; width:234px; margin:10px 0; "} OR
+          
           %div
             = link_to "/auth/facebook", class: "btn danger", style: "width:205px;" do
-              %img{ style: "height:30px;", src: "https://s3.amazonaws.com/moonlite-nsdub/static/icon+facebook.png", alt: "Facebook" }
+              = image_tag ICON_LOGIN_FACEBOOK, style: "height:30px;", alt: "Facebook"
               %span.landingbuttontext Sign in with Facebook »
+          
           %div{style:"padding:12px;"}
-            %span{style:""} Learn about these sign in options
+            %span Learn about these sign in options
             %span
-              %a#signin_options_pop.mb-tooltip{href:"#", rel:"popover"}
+              %a#signin_options_pop.mb-tooltip{ rel:"popover" }
             
   :javascript
     $('#signin_options_pop').popover({trigger: 'click', placement:'bottom', content:'We think online communities work best when people use their real identities, and the best way to encourage this is to have people use a social sign-up before contributing. We take your privacy seriously and will never post on your behalf, or do anything our mothers would not approve of.'})
