--- a/app/views/pages/challenges.html.haml
+++ b/app/views/pages/challenges.html.haml
@@ -1,3 +1,6 @@
+:css
+  .container.body { background-color: transparent; padding-top: 0px; }
+  
 .aboutcontainer{style:"width:703px;"}
   .aboutbox
     .aboutheader
