--- a/app/assets/stylesheets/revolution.css
+++ b/app/assets/stylesheets/revolution.css
@@ -216,6 +216,10 @@ code,pre{font:inherit;}
 .inlinedisplay { list-style-type: none; position:relative; margin: 0; }
 .inlinedisplay li{ display:inline; }
 
+/* Modals/Revolution */
+#explore_modal { background: transparent; background-color: none; border: 0; top: 5%; margin: 0; box-shadow: none; }
+#explore_modal .explorecontainer { width: 750px; margin-top: 0px; background:none; margin: 0 0 0 -375px; }
+#explore_modal .explorenewusercontent { margin:38px; box-shadow: 0 0 30px 12px #888; }
 .explorecontainer { overflow: hidden; margin-left: auto; margin-right: auto; width: 700px; margin-top: 0px; }
 .explorenewusercontent { background-color: white; overflow: hidden; border-radius:6px; border: 1px solid rgba(0, 0, 0, .1); margin: 12px; box-shadow: 0 0 30px 12px #888; }
 .exploreheader{ margin:0px; width:669px;padding:12px 0 5px 12px; background-color:#F9F9F9;}
