--- a/app/views/modals/_explore.html.haml
+++ b/app/views/modals/_explore.html.haml
@@ -1,13 +1,7 @@
-- if current_user
-  :css
-    .explorecontainer { width: 750px; margin-top: 0px; background:none; }
-    .explorenewusercontent{ margin:38px; box-shadow: 0 0 30px 12px #888;}
-  :javascript
-    $(function(){
-      $.get("#{explore_path}", function(data){
-        $("#explore_modal").html(data);
-      });
-    })
-    
-  %div#explore_modal.dropdown_modal.modal.hide.fade{tabindex: "-1"}
+:javascript
+  $(function(){
+    $.get("#{explore_path}", function(data){ $("#explore_modal").html(data); });
+  })
+  
+%div#explore_modal.dropdown_modal.modal.hide.fade{ tabindex: "-1" }
       
