--- a/app/views/sections/_intro.html.haml
+++ b/app/views/sections/_intro.html.haml
@@ -1,31 +1,28 @@
-%div.intcontainer
-  :javascript
-    $(function(){
-      $("#nextbutton").on("ajax:success", function(xhr, data){
-        $(".intcontainer").fadeOut('slow', function(){
-          $(this).replaceWith(data).fadeIn();
+.intro_wrapper
+  .intro
+    :javascript
+      $(function(){
+        $("#nextbutton").on("ajax:success", function(xhr, data){
+          $(".intcontainer").fadeOut('slow', function(){
+            $(this).replaceWith(data).fadeIn();
+          });
         });
       });
-    })
-  %div.firstchallengeint
-    %div.firstchallengeintheader
-      %span You're about to start your first Challenge!
+    .header
+      %h2 You're about to start your first Challenge!
     %hr{ style:"margin:0"}
-    %div.firstchallengeintcontent
+    .body
       %ul
         %li
           %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon", alt: "Tip" }
-          %span.inttitle Streak bonus
-          %br
-          %span.intdetails Get multiple questions correct consecutively and you'll earn streak multipliers!
+          %h3 Streak bonus
+          %p Get multiple questions correct consecutively and you'll earn streak multipliers!
         %li
           %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon", alt: "Tip" }
-          %span.inttitle Questions are timed
-          %br
-          %span.intdetails As time decreases, so do your possible points. If time expires before you respond, you'll lose your streak bonus.
+          %h3 Questions are timed
+          %p As time decreases, so do your possible points. If time expires before you respond, you'll lose your streak bonus.
         %li
           %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon", alt: "Tip" }
-          %span.inttitle This is just the beginning!
-          %br
-          %span.intdetails Continue to improve your score by taking <strong>Creative Responses</strong> and unlocking new sections.
+          %h3 This is just the beginning!
+          %p Continue to improve your score by taking <strong>Creative Responses</strong> and unlocking new sections.
     = link_to "Begin now", start_section_path(@section.id), id: "nextbutton", style: "float: right; margin: 0 10px 10px 0;", remote: true, class: "button button-actionable", method: "post"
