--- a/app/views/sections/take.html.haml
+++ b/app/views/sections/take.html.haml
@@ -25,8 +25,10 @@
           - if @task.task?
             %hr{ style: "margin: 15px 10px;" }
             %img{ alt: "Lightbulb", src: LIGHT_BULB_URL, style: "height:20px; display:inline;" }
-            %p{ style: "vertical-align: top; display:inline-block; width:93%;" } To prove you completed this Task, you must provide a link to a website or upload an image that displays proof that you accomplished the Task.
-            %p For instance, link to files in your public Github repository, or post screenshots from your projects.
+            %p{ style: "vertical-align: top; display:inline-block; width:93%;" } 
+              To prove you completed this Task, you must provide a link to a website or upload an image that displays proof of completion. 
+              %br 
+              For instance, link to files in your public GitHub repository, or post screenshots from your projects.
         
         %div.CRresponsespace{ style: "min-height: 175px;" }           
           %h4{ style: "margin-bottom: 5px;" } Your answer:
